Media query added

--- a/style.css
+++ b/style.css
@@ -88,3 +88,9 @@ a {
 .down-arrow{
     font-size: 5rem;
 }
+
+@media screen and (max-width: 600px) {
+    body {
+      font-size: 10px;
+    }
+  }
