--- a/style.css
+++ b/style.css
@@ -91,6 +91,6 @@ a {
 
 @media screen and (max-width: 600px) {
     .heading-container {
-        padding: 1rem;
+        font-size: 1.2rem;
     }
   }
