--- a/style.css
+++ b/style.css
@@ -92,5 +92,6 @@ a {
 @media screen and (max-width: 600px) {
     .heading-container {
         font-size: 1.5rem;
+        padding: 0.5rem;
     }
   }
