--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a {
 
 @media screen and (max-width: 600px) {
     .heading-container {
-        font-size: 1.5rem;
-        padding: 0.5rem;
+        font-size: 1.2rem;
+        padding: 1rem 0.5rem;
     }
   }
